--- a/frontend.html
+++ b/frontend.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <script>
-      (async => {
+      (async () => {
         const response = await fetch('http://localhost:3000/api/v1/products')
         const data = await response.json();
         console.log(data)
